Flush out stations API in swagger.json, and then implement in src/web/myapp.py flask
