# swagger.json
@@ -57,7 +57,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/definitions/ArrayOfStations"
+                  "$ref": "#/components/schemas/ArrayOfStations"
                 }
               }
             }
@@ -74,6 +74,44 @@
             "api_key": []
           }
         ]
+      },
+      "post": {
+        "tags": [
+          "stations"
+        ],
+        "summary": "Add a station",
+        "operationId": "addStation",
+        "requestBody": {
+          "description": "Station, without unique id produced by server",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostStations"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A JSON array of station objects",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/SuccessResponse"
+                }
+              }
+            }
+          },
+          "405": {
+            "description": "Invalid input"
+          }
+        }
       }
     },
     "/stations/{stationId}": {
@@ -83,55 +121,27 @@
         ],
         "summary": "Change a station",
         "operationId": "updateStation",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
-            "name": "stationId",
-            "in": "path",
-            "description": "ID of station to update",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          },
-          {
-            "name": "siteId",
-            "in": "formData",
-            "description": "Physical location of station",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "jobType",
-            "in": "formData",
-            "description": "Family of jobs run on this station",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "name",
-            "in": "formData",
-            "description": "Family of jobs run on this station",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "Mac",
-            "in": "formData",
-            "description": "MAC address of station Nic",
-            "required": false,
-            "type": "string"
+            "$ref": "#/components/parameters/stationIdParam"
           }
         ],
+        "requestBody": {
+          "description": "Station, without unique id produced by server",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostStations"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/ApiResponse"
+              "$ref": "#/components/schemas/ApiResponse"
             }
           }
         },
@@ -155,18 +165,7 @@
         ],
         "parameters": [
           {
-            "name": "api_key",
-            "in": "header",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "petId",
-            "in": "path",
-            "description": "Pet id to delete",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
+            "$ref": "#/components/parameters/stationIdParam"
           }
         ],
         "responses": {
@@ -188,75 +187,117 @@
       }
     }
   },
-  "definitions": {
-    "ArrayOfStations": {
-      "type": "array",
-      "items": {
+  "components": {
+    "parameters": {
+      "stationIdParam" : {
+        "name": "stationId",
+        "in": "path",
+        "description": "User set Station Identifier",
+        "required": false,
+        "type": "string"
+      }
+    },
+    "schemas": {
+      "PostStations" : {
         "type": "object",
         "properties": {
-          "ManufacturingSite": {
+          "ManufacturingSite" : {
+            "description": "Physical location of station",
             "type": "string"
           },
           "JobType": {
+            "description": "Type of jobs run on this station",
             "type": "string"
           },
           "StationID": {
+            "description": "Family of jobs run on this station",
             "type": "string"
           },
           "NetToSerialMac": {
+            "description": "MAC address of station Nic",
             "type": "string"
           }
         }
-      }
-    },
-    "ApiResponse": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "type": {
-          "type": "string"
-        },
-        "message": {
-          "type": "string"
-        }
-      }
-    },
-    "User": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "username": {
-          "type": "string"
-        },
-        "firstName": {
-          "type": "string"
-        },
-        "lastName": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "phone": {
-          "type": "string"
-        },
-        "userStatus": {
-          "type": "integer",
-          "format": "int32",
-          "description": "User Status"
+      },
+      "ArrayOfStations": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "ManufacturingSite": {
+              "type": "string"
+            },
+            "JobType": {
+              "type": "string"
+            },
+            "StationID": {
+              "type": "string"
+            },
+            "NetToSerialMac": {
+              "type": "string"
+            }
+          }
         }
       },
-      "xml": {
-        "name": "User"
+      "ApiResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "type": {
+            "type": "string"
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "username": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "userStatus": {
+            "type": "integer",
+            "format": "int32",
+            "description": "User Status"
+          }
+        },
+        "xml": {
+          "name": "User"
+        }
+      }
+    },
+    "responses": {
+      "SuccessResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string"
+          }
+        }
       }
     }
   }
